// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`otion interpret \`compileStyles\` attribute 1`] = `
<DocumentFragment>
  <div
    class="let gumption come to you"
    style="color: red;"
  >
    Hello World
  </div>
</DocumentFragment>
`;

exports[`otion render \`class\` attribute 1`] = `
<DocumentFragment>
  <div
    class="Hello"
  >
    World
  </div>
</DocumentFragment>
`;

exports[`otion render \`style\` attribute 1`] = `
<DocumentFragment>
  <div
    style="color: red;"
  >
    Hello World
  </div>
</DocumentFragment>
`;

exports[`otion renders 1`] = `
<DocumentFragment>
  <div>
    Hello World
  </div>
</DocumentFragment>
`;
